# chessmate

./: .gitattributes  .gitignore  Cargo.toml
chess-engine/: Cargo.toml  design.txt  wasm.sh
chess-engine/chess-macros/: Cargo.toml
chess-engine/chess-macros/src/: lib.rs
chess-engine/src/: engine.rs  lib.rs
reasonml/: .merlin  bootstrap.js  bsconfig.json  package.json  webpack.config.js
reasonml/bundle/: index.js
reasonml/src/: Hello.re  Index.re  Wasm.ml
src/: cli.rs  main.rs  web.rs
static/: 1.index.js  2.index.js  index.html  index.js
static/bundle/: index.js
