[package]
name = "chessmate"
version = "0.0.1"
authors = ["juliancoffee <lightdarkdaughter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
structopt = "0.3"
chess-engine = { path = "chess-engine" }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["serve"]
