[package]
name = "chess-engine"
version = "0.0.1"
authors = ["juliancoffee <lightdarkdaughter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = []

[dependencies]
wasm-bindgen = "0.2"
chess_macros = { path = "chess-macros" }
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
lto = true
opt-level = "s"
